--- a/verification.ipynb
+++ b/verification.ipynb
@@ -35,11 +35,108 @@
     "# Adjust spacing between subplots (optional)\n",
     "plt.subplots_adjust(left=0.05, right=0.95, wspace=0.05)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "# Define a list to store the dataframes\n",
+    "all_dfs = []\n",
+    "\n",
+    "# Loop through the CSV files and read them into dataframes\n",
+    "for filename in os.listdir('./csv_results/report_class_1/'):  # Replace with your filenames\n",
+    "  df = pd.read_csv(filename)\n",
+    "  all_dfs.append(df)\n",
+    "\n",
+    "# Combine all dataframes vertically (stacking rows)\n",
+    "combined_df = pd.concat(all_dfs, ignore_index=True)  # Optional: reset index\n",
+    "\n",
+    "# Save the combined dataframe to a new CSV file\n",
+    "combined_df.to_csv(\"combined.csv\", index=False)  # Optional: remove index column\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gaussian_blur.csv\n",
+      "saturate.csv\n",
+      "glass_blur.csv\n",
+      "defocus_blur.csv\n",
+      "snow.csv\n",
+      "random_crop.csv\n",
+      "brightness.csv\n",
+      "gaussian_noise.csv\n",
+      "motion_blur.csv\n",
+      "shot_noise.csv\n",
+      "color_jitter.csv\n",
+      "impulse_noise.csv\n",
+      "speckle_noise.csv\n",
+      "zoom_blur.csv\n",
+      "pixelate.csv\n",
+      "fog.csv\n",
+      "jpeg_compression.csv\n",
+      "contrast.csv\n",
+      "spatter.csv\n",
+      "rot270.csv\n",
+      "flip.csv\n",
+      "rot90.csv\n",
+      "elastic_transform.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "all_dfs = []\n",
+    "names= []\n",
+    "root='./csv_results/report_class_1/'\n",
+    "for filename in os.listdir(root):\n",
+    "    print(filename)\n",
+    "    df = pd.read_csv(root + filename)\n",
+    "    df.insert(loc=0, column='noise', value=filename.split('.')[0])\n",
+    "    all_dfs.append(df)\n",
+    "    names.append(filename.split('.')[0])\n",
+    "\n",
+    "combined_df = pd.concat(all_dfs, ignore_index=True)\n",
+    "combined_df.to_csv(root + \"combined.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Torch",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
