saving normal encoder values

--- a/clip_vec/temp.ipynb
+++ b/clip_vec/temp.ipynb
@@ -368,10 +368,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files already downloaded and verified\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'args' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/storage/users/makhavan/CSI/exp09/new_contrastive/clip_vec/temp.ipynb Cell 18\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22564d5f3338227d/storage/users/makhavan/CSI/exp09/new_contrastive/clip_vec/temp.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=17'>18</a>\u001b[0m cifar10_path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m/storage/users/makhavan/CSI/finals/datasets/data/\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22564d5f3338227d/storage/users/makhavan/CSI/exp09/new_contrastive/clip_vec/temp.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=18'>19</a>\u001b[0m cifar10_dataset \u001b[39m=\u001b[39m CIFAR10(root\u001b[39m=\u001b[39mcifar10_path, train\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, download\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, transform\u001b[39m=\u001b[39mtransform)\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22564d5f3338227d/storage/users/makhavan/CSI/exp09/new_contrastive/clip_vec/temp.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=19'>20</a>\u001b[0m cifar10_loader \u001b[39m=\u001b[39m DataLoader(cifar10_dataset, shuffle\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m, batch_size\u001b[39m=\u001b[39margs\u001b[39m.\u001b[39mbatch_size, num_workers\u001b[39m=\u001b[39margs\u001b[39m.\u001b[39mnum_workers)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22564d5f3338227d/storage/users/makhavan/CSI/exp09/new_contrastive/clip_vec/temp.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=21'>22</a>\u001b[0m diffs \u001b[39m=\u001b[39m []\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B7b22686f73744e616d65223a22564d5f3338227d/storage/users/makhavan/CSI/exp09/new_contrastive/clip_vec/temp.ipynb#X23sdnNjb2RlLXJlbW90ZQ%3D%3D?line=22'>23</a>\u001b[0m \u001b[39mfor\u001b[39;00m i, data \u001b[39min\u001b[39;00m \u001b[39menumerate\u001b[39m(cifar10_loader):\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'args' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from PIL import Image\n",
+    "from torchvision import transforms\n",
+    "from clip import clip\n",
+    "from torchvision.datasets import CIFAR10\n",
+    "from torch.utils.data import DataLoader\n",
+    "import numpy as np\n",
+    "import PIL\n",
+    "from tqdm import tqdm\n",
+    "import argparse\n",
+    "import pickle\n",
+    "\n",
+    "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "model, transform = clip.load(\"ViT-B/32\", device=device)\n",
+    "\n",
+    "\n",
+    "cifar10_path = '/storage/users/makhavan/CSI/finals/datasets/data/'\n",
+    "cifar10_dataset = CIFAR10(root=cifar10_path, train=True, download=True, transform=transform)\n",
+    "cifar10_loader = DataLoader(cifar10_dataset, shuffle=False, batch_size=16)\n",
+    "\n",
+    "diffs = []\n",
+    "for i, data in enumerate(cifar10_loader):\n",
+    "    imgs_n, targets = data\n",
+    "    # imgs_n, imgs_aug = transform(imgs_n).to(device), transform(imgs_aug).to(device)\n",
+    "    imgs_n = imgs_n.to(device)\n",
+    "    imgs_n_features = model.encode_image(imgs_n)\n",
+    "    diffs.extend(imgs_n_features.detach().cpu().numpy())\n"
+   ]
   }
  ],
  "metadata": {
