create all diffs pkl

--- a/verification.ipynb
+++ b/verification.ipynb
@@ -62,39 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gaussian_blur.csv\n",
-      "saturate.csv\n",
-      "glass_blur.csv\n",
-      "defocus_blur.csv\n",
-      "snow.csv\n",
-      "random_crop.csv\n",
-      "brightness.csv\n",
-      "gaussian_noise.csv\n",
-      "motion_blur.csv\n",
-      "shot_noise.csv\n",
-      "color_jitter.csv\n",
-      "impulse_noise.csv\n",
-      "speckle_noise.csv\n",
-      "zoom_blur.csv\n",
-      "pixelate.csv\n",
-      "fog.csv\n",
-      "jpeg_compression.csv\n",
-      "contrast.csv\n",
-      "spatter.csv\n",
-      "rot270.csv\n",
-      "flip.csv\n",
-      "rot90.csv\n",
-      "elastic_transform.csv\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import os\n",
@@ -117,7 +87,100 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "\n",
+    "dataset = 'cifar10'\n",
+    "\n",
+    "softmax_sorted = {}\n",
+    "diff_vals = {}\n",
+    "for class_idx in range(10):\n",
+    "    diff_vals[class_idx] = {}\n",
+    "\n",
+    "targets_list_loaded = np.load('/storage/users/makhavan/CSI/finals/datasets/generalization_repo_dataset/manual/CIFAR-10-Train-R-A/labels-A.npy')\n",
+    "for class_idx in range(10):\n",
+    "    indices = [k for k in range(len(targets_list_loaded)) if targets_list_loaded[k]==class_idx]\n",
+    "    for file_name in os.listdir('./clip_vec/tensors/'):\n",
+    "        if dataset in file_name and 'target' not in file_name and 'normal_data' not in file_name:\n",
+    "            with open('./clip_vec/tensors/' + file_name, 'rb') as file:\n",
+    "                diffs_loaded = pickle.load(file)\n",
+    "        \n",
+    "            noise_name = file_name.replace(f\"{dataset}_diffs_\", \"\", 1).split('.')[0]\n",
+    "            diff_vals[class_idx][noise_name] = torch.mean(torch.tensor([diffs_loaded[idx].astype(np.float32) for idx in indices])).float()\n",
+    "\n",
+    "for i in range(10):\n",
+    "    softmaxes = torch.nn.functional.softmax(torch.tensor(list(diff_vals[i].values())), dim=0).numpy()\n",
+    "    for j, key in enumerate(diff_vals[i].keys()):\n",
+    "        diff_vals[i][key] = softmaxes[j]\n",
+    "\n",
+    "for i in range(10):\n",
+    "    sorted_values = sorted(diff_vals[i].items(), key=lambda item: item[1])\n",
+    "    diff_vals[i] = dict(sorted_values)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import torch\n",
+    "import pickle\n",
+    "import numpy as np\n",
+    "\n",
+    "dataset = 'svhn'\n",
+    "\n",
+    "softmax_sorted = {}\n",
+    "diff_vals = {}\n",
+    "for class_idx in range(10):\n",
+    "    diff_vals[class_idx] = {}\n",
+    "\n",
+    "targets_list_loaded = np.load('/storage/users/makhavan/CSI/finals/datasets/generalization_repo_dataset/manual/SVHN-Train-R-A/labels-A.npy')\n",
+    "for class_idx in range(10):\n",
+    "    indices = [k for k in range(len(targets_list_loaded)) if targets_list_loaded[k]==class_idx]\n",
+    "    for file_name in os.listdir('./clip_vec/tensors/'):\n",
+    "        if dataset in file_name and 'target' not in file_name and 'normal_data' not in file_name:\n",
+    "            with open('./clip_vec/tensors/' + file_name, 'rb') as file:\n",
+    "                diffs_loaded = pickle.load(file)\n",
+    "        \n",
+    "            noise_name = file_name.replace(f\"{dataset}_diffs_\", \"\", 1).split('.')[0]\n",
+    "            diff_vals[class_idx][noise_name] = torch.mean(torch.tensor([diffs_loaded[idx].astype(np.float32) for idx in indices])).float()\n",
+    "\n",
+    "for i in range(10):\n",
+    "    softmaxes = torch.nn.functional.softmax(torch.tensor(list(diff_vals[i].values())), dim=0).numpy()\n",
+    "    for j, key in enumerate(diff_vals[i].keys()):\n",
+    "        diff_vals[i][key] = softmaxes[j]\n",
+    "\n",
+    "for i in range(10):\n",
+    "    sorted_values = sorted(diff_vals[i].items(), key=lambda item: item[1])\n",
+    "    diff_vals[i] = dict(sorted_values)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./svhn_softmaxed.pkl', 'wb') as f:\n",
+    "    pickle.dump(diff_vals, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "dfs = []\n",
+    "for i in range(10):\n",
+    "    pd.DataFrame(diff_vals[i], index=[i]).T.to_csv(f'{i}.csv', index=True)"
+   ]
   }
  ],
  "metadata": {
